--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -328,6 +328,7 @@ button {
   &.is--active {
     &:not([disabled]) {
       background-color: var(--c-gris_fonce);
+      color: white;
     }
   }
 
