FIX / grid layout

--- a/client/src/components/publications/edition/pagedengine.css
+++ b/client/src/components/publications/edition/pagedengine.css
@@ -184,13 +184,17 @@ hr {
   }
 }
 
+.book .grid {
+  page: grid;
+}
+
 .book .gallery-content,
 .book .grid-content {
   position: absolute;
   top: calc(var(--pagedjs-margin-top) * -1);
   left: calc(var(--pagedjs-margin-left) * -1);
-  width: var(--pagedjs-width);
-  height: calc(var(--pagedjs-height) - 1px); /* -1px permet de régler le petit bug de pagedjs */
+  width: calc(var(--pagedjs-width));
+  height: calc(var(--pagedjs-height) ); /* -1px permet de régler le petit bug de pagedjs */
   padding: calc(var(--spacing) * 1) !important;
   overflow: hidden;
 
