--- a/client/src/components/publications/edition/pagedengine.css
+++ b/client/src/components/publications/edition/pagedengine.css
@@ -212,10 +212,12 @@ hr {
 }
 
 /* GRID LAYOUT */
-.edition .grid  {
+.edition .grid,
+.edition .gallery {
   position: relative;
-  break-before: page;
+  min-height: 50px;
   break-after: page;
+  break-inside: avoid;
 }
 
 .edition .grid-content {
@@ -252,7 +254,6 @@ hr {
 }
 
 /* SET CHAPTER START OPTION */
-
 .chapter[data-starts-on-page="in_flow"]:not(:first-child) {
   margin-top: 3rem;
 }
@@ -269,6 +270,11 @@ hr {
   column-count: var(--column-count, 1);
   column-fill: auto;
   column-gap: 1rem;
+}
+.chapter[data-chapter-type="grid"],
+.chapter[data-chapter-type="gallery"] {
+  break-before: page;
+  break-after: page;
 }
 
 /* SET COVER OPTIONS */
