--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -89,11 +89,12 @@ input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 3px;
+  height: 34px;
   background: transparent;
   outline: none;
   margin: 0;
   padding: 0;
+  cursor: pointer;
 
   // Webkit (Chrome, Safari, Edge)
   &::-webkit-slider-track {
@@ -121,6 +122,7 @@ input[type="range"] {
     height: 3px;
     background: #808080;
     border: none;
+    margin-top: calc((34px - 3px) / 2);
   }
 
   // Firefox
@@ -152,11 +154,22 @@ input[type="range"] {
     outline: none;
   }
 
-  &:focus::-webkit-slider-thumb {
+  &:focus-visible::-webkit-slider-thumb {
     box-shadow: 0 0 0 2px rgba(128, 128, 128, 0.2);
   }
 
-  &:focus::-moz-range-thumb {
+  &:focus-visible::-moz-range-thumb {
     box-shadow: 0 0 0 2px rgba(128, 128, 128, 0.2);
+  }
+
+  &:hover {
+    &::-webkit-slider-thumb {
+      background: var(--active-color);
+      border-color: var(--active-color);
+    }
+    &::-moz-range-thumb {
+      background: var(--active-color);
+      border-color: var(--active-color);
+    }
   }
 }
