UI / tweak button icons

--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -285,6 +285,10 @@ button,
 
   &.u-button_small {
     padding: calc(var(--spacing) / 4);
+    .b-icon.bi {
+      width: 1em;
+      height: 1em;
+    }
   }
 }
 .u-button_inline {
