--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -212,9 +212,7 @@ button,
   gap: calc(var(--spacing) / 4);
   align-items: center;
   justify-content: center;
-  // text-transform: uppercase;
   font-weight: 400;
-  // letter-spacing: 0.02em;
   font-size: var(--input-font-size);
   text-decoration: none;
   color: inherit;
@@ -279,7 +277,7 @@ button,
     }
   }
   &.is--active {
-    background-color: var(--active-color);
+    background-color: var(--c-noir);
     color: white;
   }
 
