--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -16,6 +16,10 @@
 .u-button {
   text-transform: initial;
   font-weight: 500;
+
+  &.is--active.is--active {
+    color: var(--r-500);
+  }
 }
 
 .u-button_outline {
@@ -63,15 +67,6 @@ label,
     padding: calc(var(--spacing) / 4);
     background-color: var(--h-500);
     margin-left: calc(var(--spacing) / 2);
-  }
-}
-
-.u-button {
-  > .b-icon {
-    // only if there is text after the icon
-    &:not(:last-child) {
-      margin-right: calc(var(--spacing) / 2);
-    }
   }
 }
 
