--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -1,14 +1,9 @@
 .u-label {
   display: block;
-
-  font-family: var(--sl-font-mono);
+  color: var(--label-color);
+  margin-bottom: calc(var(--spacing) / 4);
   font-size: var(--sl-font-size-small);
   font-weight: 400;
-  color: inherit;
-  // opacity: 0.8;
-  margin-bottom: calc(var(--spacing) / 4);
-
-  // color: var(--label-color);
 }
 .u-meta {
   text-transform: uppercase;
@@ -58,7 +53,7 @@ a:focus-visible {
 
 .u-instructions {
   font-style: italic;
-  font-size: var(--input-font-size-small);
+  color: var(--label-color);
 }
 .u-warning {
   display: flex;
@@ -67,7 +62,7 @@ a:focus-visible {
   align-items: center;
   color: var(--c-rouge);
   // font-weight: bold;
-  border: 1px solid var(--c-rouge_clair);
+  border: 1px solid var(--c-rouge);
   border-top-width: 4px;
   max-width: 50ch;
   // background-color: var(--c-rouge_clair);
@@ -84,6 +79,17 @@ a:focus-visible {
   }
 }
 
+.u-notice {
+  display: flex;
+  gap: calc(var(--spacing) / 2);
+  align-items: center;
+  padding: calc(var(--spacing) / 1.5);
+  background-color: var(--c-bleumarine_clair);
+  border-radius: 4px;
+  font-size: 0.9em;
+  color: var(--c-bleumarine_tres_fonce);
+}
+
 .u-wips {
   position: relative;
   // text-align: center;
@@ -93,7 +99,9 @@ a:focus-visible {
     content: "en chantier :)";
     font-family: "Fira Code";
     background: var(--c-orange);
-    padding: calc(var(--spacing) / 4) calc(var(--spacing) / 1);
+    padding: calc(var(--spacing) / 8) calc(var(--spacing) / 4);
+    font-size: var(--sl-font-size-small);
+
     border-radius: 6px;
     transform: rotate(-6deg);
     position: relative;
@@ -105,22 +113,23 @@ a:focus-visible {
   padding: calc(var(--spacing) / 2);
 }
 
-.u-card2 {
-  // border-bottom: 2px solid var(--c-gris);
-  // box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
+.u-card--header {
+  font-weight: 600;
+}
 
-  transform-origin: center top;
+.u-card2 {
+  border: 2px solid var(--c-gris_clair);
+  // box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
+  // filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
+
+  transform-origin: center center;
   transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 
   &:hover,
   &:focus-visible {
-    transform: translateY(-2px) scale(1.02) rotate(-0deg);
-    filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.1));
-    // box-shadow: 0 0 0 1px hsla(230, 13%, 9%, 0.05),
-    //   0 0.9px 1.25px hsla(230, 13%, 9%, 0.025),
-    //   0 3px 5px hsla(230, 13%, 9%, 0.05), 0 12px 20px hsla(230, 13%, 9%, 0.09);
-    // box-shadow: 0 3px 6px rgba(51, 51, 51, 0.16);
+    transform: translateY(-0) rotate(-0deg);
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.05));
+    border-color: var(--c-gris);
   }
 }
 
@@ -149,30 +158,29 @@ a:focus-visible {
   line-height: 1;
   padding: 0;
   color: currentColor;
-  // text-decoration: underline;
-  // text-decoration-thickness: auto;
-  // text-underline-offset: 0.1em;
-  // text-decoration-thickness: 0.07em;
-
+  text-decoration: underline;
+  text-decoration-thickness: auto;
+  text-underline-offset: 0.1em;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
   flex-flow: row nowrap;
   white-space: nowrap;
   gap: calc(var(--spacing) / 4);
+  font-size: var(--sl-font-size-small);
+
+  text-decoration-thickness: 0.07em;
 
   &[disabled] {
     cursor: not-allowed;
-    opacity: 0.6;
     text-decoration: none;
   }
 
   &.is--active {
-    // color: var(--c-bleuvert);
-    font-weight: 600;
+    color: var(--c-bleuvert);
   }
-  &.has--ts {
-    text-shadow: -1px -1px 4px white;
+  &.has--whitebg {
+    background: white;
   }
   &.u-buttonLink_white {
     color: white;
@@ -194,7 +202,8 @@ a:focus-visible {
   }
 }
 
-button {
+button,
+.u-unset {
   appearance: unset;
 }
 
@@ -203,9 +212,7 @@ button {
   gap: calc(var(--spacing) / 4);
   align-items: center;
   justify-content: center;
-  text-transform: uppercase;
   font-weight: 400;
-  letter-spacing: 0.02em;
   font-size: var(--input-font-size);
   text-decoration: none;
   color: inherit;
@@ -213,18 +220,14 @@ button {
   background-color: var(--c-gris_clair);
   white-space: break-spaces;
 
-  padding: calc(var(--spacing) / 1.5) calc(var(--spacing) * 1);
+  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1);
   border-radius: var(--input-border-radius);
-
-  background: var(--g-100);
-  color: var(--c-noir);
 
   transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
 
   .b-icon.bi {
     width: 1.35em;
     height: 1.35em;
-    overflow: visible;
   }
 
   svg,
@@ -238,43 +241,27 @@ button {
   &[disabled] {
     cursor: not-allowed;
     filter: grayscale(50%);
-    color: var(--c-gris_fonce);
+    color: var(--c-gris);
   }
 
   &:hover,
   &:active,
-  &:focus-visible,
-  &.is--active {
+  &:focus-visible {
     &:not([disabled]) {
-      color: white;
       outline: 0;
-      background: var(--g-900);
+      background-color: var(--c-gris);
     }
   }
-}
-.u-button_round {
-  padding: calc(var(--spacing) / 1);
-  border-radius: 50%;
-}
-.u-button_pill {
-  padding: calc(var(--spacing) / 2) calc(var(--spacing) * 1);
-  border-radius: 999px;
-}
-
-.u-button_nopadding {
-}
-
-.u-button_outline {
-  background: transparent;
-  color: inherit;
-  border: 1px solid currentColor;
+  &.is--active {
+    background: var(--active-color);
+    color: white;
+  }
 }
 
 .u-button_icon {
   padding: calc(var(--spacing) / 2);
   background: transparent;
   border-radius: 50%;
-  font-size: var(--sl-font-size-medium);
   color: inherit;
 
   > svg {
@@ -283,12 +270,15 @@ button {
 
   &:hover,
   &:active,
-  &:focus-visible,
-  &.is--active {
+  &:focus-visible {
     &:not([disabled]) {
-      color: var(--active-color);
-      background: transparent;
+      // color: var(--active-color);
+      background-color: rgba(0, 0, 0, 0.1);
     }
+  }
+  &.is--active {
+    background-color: var(--c-noir);
+    color: white;
   }
 
   &.u-button_small {
@@ -314,31 +304,25 @@ button {
 .u-button_transparent {
   background-color: transparent;
 
+  &:hover,
+  &:focus-visible,
+  &.is--active {
+    &:not([disabled]) {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+  }
+
   &[disabled] {
-    color: var(--c-gris);
     &:hover,
     &:focus-visible,
     &.is--active {
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: transparent;
     }
   }
 }
 .u-button_black {
   background-color: var(--c-noir);
   color: white;
-
-  &:hover,
-  &:focus-visible,
-  &.is--active {
-    &:not([disabled]) {
-      background-color: var(--c-gris_fonce);
-      color: white;
-    }
-  }
-
-  &[disabled] {
-    color: var(--c-gris);
-  }
 }
 .u-button_white {
   background-color: white;
@@ -349,11 +333,8 @@ button {
   &.is--active {
     &:not([disabled]) {
       background-color: var(--active-color);
+      color: white;
     }
-  }
-
-  &[disabled] {
-    color: var(--c-gris_fonce);
   }
 }
 .u-button_red {
@@ -383,10 +364,6 @@ button {
       background-color: var(--c-bleuvert_fonce);
     }
   }
-
-  &[disabled] {
-    background-color: var(--c-gris_fonce);
-  }
 }
 .u-button_bleuvert_fonce {
   background-color: var(--c-bleuvert_fonce);
@@ -413,7 +390,7 @@ button {
     &:not([disabled]) {
       background: rgba(255, 255, 255, 1);
       color: var(--c-noir);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       transform: translateY(-1px);
     }
   }
@@ -446,7 +423,6 @@ button {
   }
 }
 .u-button_small {
-  font-size: var(--input-font-size-small);
   padding: calc(var(--spacing) / 4) calc(var(--spacing) / 2);
 
   b-icon {
@@ -454,9 +430,8 @@ button {
   }
 }
 .u-button_verysmall {
-  font-size: var(--input-font-size-x-small);
-  padding: calc(var(--spacing) / 8) calc(var(--spacing) / 4);
   font-size: var(--sl-font-size-x-small);
+  padding: calc(var(--spacing) / 8) calc(var(--spacing) / 4);
 }
 .u-button_big {
   font-size: var(--input-font-size-big);
@@ -484,17 +459,12 @@ input[type="text"],
 input[type="time"],
 input[type="url"],
 input[type="week"],
-select {
+select,
+textarea {
   all: unset;
   box-sizing: border-box;
 }
 
-textarea {
-  border: none;
-  font-family: inherit;
-  font-size: inherit;
-  min-height: 4.5em;
-}
 input[type="number"] {
   min-width: 8ch;
 
@@ -532,8 +502,7 @@ textarea,
   // color: var(--input-color);
   color: inherit;
   // border: solid var(--input-border-width) var(--input-border-color);
-  // border-radius: var(--input-border-radius);
-  background-color: hsl(0, 0%, 94%);
+  padding: calc(var(--spacing) / 2);
   border-radius: var(--input-border-radius);
   background-color: var(--c-gris_clair);
   color: inherit;
@@ -549,27 +518,21 @@ textarea,
   padding: calc(var(--spacing) * 0.5) calc(var(--spacing) * 0.5);
   margin: 0;
 
-  border-bottom: 1px solid transparent;
+  // border-bottom: 2px solid var(--c-gris);
 
   transition: all 0.05s;
 
-  &.is--dark {
-    background-color: hsl(0, 0%, 21%);
-    border-color: white;
-    color: white;
-
-    &[disabled] {
-      border-color: transparent;
-    }
+  &:hover {
+    outline: 0;
+    background-color: var(--c-gris_clair);
+  }
+  &:focus-visible {
+    outline: 0;
+    background-color: var(--c-gris_clair);
   }
 
-  &:hover:not([disabled]) {
-    outline: 0;
-    border-bottom: 1px solid var(--input-border-color);
-  }
-  &:focus-visible:not([disabled]) {
-    outline: 0;
-    border-bottom: 1px solid var(--input-border-color-focus);
+  &.bg-blanc {
+    background-color: white;
   }
   &[required] {
     background-size: 16px 16px;
@@ -598,7 +561,7 @@ textarea,
 textarea,
 [contenteditable="true"] {
   height: auto;
-  padding: calc(var(--spacing) / 4) calc(var(--spacing) / 2);
+  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 2);
 }
 
 input[size="small"] {
@@ -633,12 +596,7 @@ select {
   padding: calc(var(--spacing) / 2);
   padding-right: calc(var(--spacing) * 0.5 + 1rem);
   min-width: 0px;
-  line-height: 1;
-
-  &.is--dark {
-    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='41px' height='26px' viewBox='0 0 41 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpolygon id='Path-3' fill='%23ffffff' points='0 5.38215461 19.9830489 25.3652035 40.1398855 5.20836689 34.9315186 0 19.8691842 15.0623344 4.83971338 0.0328636246'%3E%3C/polygon%3E%3C/g%3E%3C/svg%3E%0A");
-  }
-
+  cursor: pointer;
   line-height: 1.5;
   border-radius: var(--input-border-radius);
   user-select: none;
@@ -650,8 +608,8 @@ select {
   &[size="small"] {
     height: var(--input-height-small);
     font-size: var(--sl-font-size-small);
-    padding-top: calc(var(--spacing) / 8);
-    padding-bottom: calc(var(--spacing) / 8);
+    padding-top: calc(var(--spacing) / 4);
+    padding-bottom: calc(var(--spacing) / 4);
     line-height: 1.5;
   }
 
@@ -712,9 +670,6 @@ input[type="file"] {
     color: white;
     border: 0px solid currentColor;
     white-space: nowrap;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: var(--input-font-size-small);
 
     &:hover {
       background-color: var(--c-rouge_fonce);
@@ -897,7 +852,10 @@ code {
   left: 0;
   right: 0;
   bottom: 0;
-  // background-color: rgba(255, 255, 255, 0.6);
+  color: var(--c-gris);
+  font-weight: 500;
+
+  background-color: rgba(255, 255, 255, 0.6);
 
   display: flex;
   justify-content: center;
@@ -945,14 +903,6 @@ fieldset {
   min-width: 0;
 
   legend {
-    // <<<<<<< HEAD
-    //     color: var(--c-gris_fonce) !important;
-    //     background: white;
-    //     border-radius: 4px;
-    //     text-align: center;
-    //     padding: 0 calc(var(--spacing) / 2);
-    //     font-weight: 500;
-    // =======
     @extend .u-label;
     width: 100%;
     float: left;
@@ -968,52 +918,15 @@ fieldset {
 .u-textEllipsis {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
   overflow: hidden;
 }
-
-.u-floatingFsButton {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin: calc(var(--spacing) / 1);
-
-  @media print {
-    display: none;
-  }
+.u-textEllipsis_3 {
+  -webkit-line-clamp: 3;
 }
-.u-breadcrumb {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  gap: calc(var(--spacing) / 2);
-
-  > * {
-    display: flex;
-    align-items: center;
-  }
+.u-textEllipsis_1 {
+  -webkit-line-clamp: 1;
 }
 
-.u-shareBtn {
-  display: flex;
-  flex-flow: row nowrap;
-
-  &.is--disabled {
-    opacity: 0.3;
-  }
-
-  &::part(base) {
-    color: #fff;
-
-    &:hover,
-    &:focus {
-      color: var(--c-bleuvert);
-    }
-    &:active {
-      color: #ccc;
-    }
-  }
-}
 input[type="checkbox"] {
   width: 1.15em;
   height: 1.15em;
@@ -1102,18 +1015,6 @@ input[type="checkbox"] {
     }
   }
 }
-.u-keywords {
-  display: flex;
-  flex-flow: row wrap;
-  gap: calc(var(--spacing) / 4);
-  font-size: var(--input-font-size-small);
-
-  > * {
-    &.is--first {
-      border: 2px solid black;
-    }
-  }
-}
 
 .u-disabled {
   cursor: not-allowed;
@@ -1162,23 +1063,28 @@ input[type="checkbox"] {
 
 .u-dropzone {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  gap: calc(var(--spacing) / 1);
+  gap: calc(var(--spacing) / 4);
 
   width: 100%;
 
   background-color: white;
   color: var(--c-noir);
 
-  padding: calc(var(--spacing) / 1);
+  padding: calc(var(--spacing) / 4);
 
-  // border: 2px dashed var(--active-color);
-  // border-radius: 10px;
+  // border-image-source: url(./utils/border-circle.svg);
+  // border-image-slice: 33% 33%;
+  // border-image-repeat: round;
+  // border-width: 8px;
 
+  border: 3px dotted white;
+  border-radius: 10px;
+
+  border-color: var(--dropzone-color2);
   background-color: var(--dropzone-color1);
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23ffbc00' stroke-width='2' stroke-dasharray='10%2c10' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 
   transition: all 0.15s cubic-bezier(0.19, 1, 0.22, 1);
 
