--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -212,11 +212,13 @@ button,
   gap: calc(var(--spacing) / 4);
   align-items: center;
   justify-content: center;
+  border: 2px solid transparent;
   font-weight: 400;
   font-size: var(--input-font-size);
   text-decoration: none;
   color: inherit;
   white-space: nowrap;
+  cursor: pointer;
   background-color: var(--c-gris_clair);
   white-space: break-spaces;
 
@@ -253,8 +255,7 @@ button,
     }
   }
   &.is--active {
-    background: var(--active-color);
-    color: white;
+    border-color: rgba(0, 0, 0, 0.3);
   }
 }
 
