Add remove dropdown

--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -80,7 +80,7 @@ label,
 
 input[type="checkbox"] {
   border-width: 1px;
-  background-color: transparent;
+  background-color: white;
 }
 
 details {
