--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -263,6 +263,7 @@ button,
   padding: calc(var(--spacing) / 2);
   background: transparent;
   border-radius: 50%;
+  border: none;
   color: inherit;
 
   > svg {
