--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -51,7 +51,7 @@
 .u-button_transparent {
   &.is--active {
     background-color: var(--g-200);
-    border-color: var(--g-500);
+    outline-color: var(--g-500);
   }
 }
 
