--- a/client/src/utils/utils.scss
+++ b/client/src/utils/utils.scss
@@ -258,10 +258,16 @@ button,
   }
   &.is--active {
     &:not([disabled]) {
-      background-color: var(--active-color);
+      background-color: var(--g-500);
       color: white;
       // outline: 2px solid var(--active-color);
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px inset rgba(0, 0, 0, 0.2);
+
+      &:hover,
+      &:active,
+      &:focus-visible {
+        background-color: var(--g-400);
+      }
     }
   }
 }
@@ -283,18 +289,6 @@ button,
     &:not([disabled]) {
       // color: var(--active-color);
       background-color: rgba(0, 0, 0, 0.1);
-    }
-  }
-  &.is--active {
-    background-color: var(--c-noir);
-    color: white;
-
-    &:hover,
-    &:active,
-    &:focus-visible {
-      &:not([disabled]) {
-        background-color: var(--c-gris_fonce);
-      }
     }
   }
 
@@ -320,22 +314,6 @@ button,
 }
 .u-button_transparent {
   background-color: transparent;
-
-  &:hover,
-  &:focus-visible,
-  &.is--active {
-    &:not([disabled]) {
-      background-color: rgba(0, 0, 0, 0.1);
-    }
-  }
-
-  &[disabled] {
-    &:hover,
-    &:focus-visible,
-    &.is--active {
-      background-color: transparent;
-    }
-  }
 }
 .u-button_black {
   background-color: var(--c-noir);
