--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -16,11 +16,19 @@
 .u-button {
   text-transform: initial;
   font-weight: 400;
+  color: var(--g-700);
 
   &.is--active.is--active {
     // outline: 0;
     // color: var(--r-500);
+    color: var(--g-700);
+    background-color: var(--g-200);
+    box-shadow: none;
   }
+}
+
+.u-button_icon {
+  border-radius: 8px;
 }
 
 .u-button_outline {
