--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -83,7 +83,7 @@ label,
 
   > * {
     padding: calc(var(--spacing) / 4);
-    background-color: var(--h-500);
+    background-color: var(--g-500);
     margin-left: calc(var(--spacing) / 2);
   }
 }
