--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -1,3 +1,27 @@
+input[type="color"],
+input[type="date"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="checkbox"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+input[type="week"],
+select,
+textarea,
+.u-input,
+[contenteditable="true"] {
+  background-color: white;
+  border: solid 1px var(--g-200);
+  border-radius: 1px;
+}
+
 ._editBtn._editBtn {
   --color2: var(--active-color) !important;
   // --color2: currentColor !important;
@@ -68,8 +92,8 @@
 label,
 .u-label {
   // font-weight: 500;
-  font-size: var(--sl-font-size-medium);
-  font-family: var(--sl-font-sans);
+  font-size: var(--sl-font-size-large);
+  font-weight: 500;
 }
 
 .u-displayAsPublic {
