--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -16,7 +16,7 @@ input[type="week"],
 select,
 textarea,
 .u-input,
-[contenteditable="true"] {
+[contenteditable="true"]:not(.ql-editor) {
   background-color: white;
   border: solid 2px var(--g-100);
   border-radius: 1px;
