--- a/client/src/utils/utils-luma.scss
+++ b/client/src/utils/utils-luma.scss
@@ -19,14 +19,20 @@ textarea,
 [contenteditable="true"]:not(.ql-editor) {
   background-color: white;
   border: solid 2px var(--g-100);
-  border-radius: 1px;
+  padding: calc(var(--spacing) / 1.5);
+  border-radius: 0px;
 
   &:hover {
     background-color: white;
+    border-color: var(--g-200);
   }
   &:focus-visible {
     background-color: white;
     border-color: var(--g-300);
+  }
+
+  &[required] {
+    background-image: radial-gradient(var(--g-500) 18%, transparent 25%);
   }
 }
 
@@ -120,9 +126,11 @@ label,
 }
 
 input[type="checkbox"] {
-  border-width: 1px;
-  border-radius: 50%;
   background-color: white;
+
+  &:checked {
+    // border-color: var(--g-500);
+  }
 }
 
 details {
